# rusdattendance

./: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md
Python/rusdattendance/: LICENSE  README.md  setup.cfg
Python/rusdattendance/rusdattendance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Python/rusdattendance/src/: __init__.py  models.py  tbd.py
Python/rusdattendance/src/rusdattendance/: __init__.py  __main__.py  tbd.py
Python/rusdattendance/src/rusdattendance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Python/rusdattendance/src/rusdattendance/models/: __init__.py  base.py  labels.py
Python/rusdattendance/tests/: test_tbd.py
Python/rusdattendance/tests/models/: conftest.py  helpers.py  test_base.py  test_labels.py
Python/temporary/: academics.py  geography.py  people.py
R/: parse_grade_level.R  read_adm_ada.R
R/rusdattendance/: .Rbuildignore  NAMESPACE
R/rusdattendance/inst/extdata/: raw_admada_for_ral.csv
R/rusdattendance/man/: grade_levels.Rd
R/rusdattendance/tests/: testthat.R
inst/extdata/: nasty_admada_for_testing.csv
man/: read_adm_ada.Rd
r-package/: DESCRIPTION  LICENSE.md  NAMESPACE
r-package/R/: read_adm_ada.R
r-package/inst/extdata/: nasty_admada_for_testing.csv
r-package/man/: parse_grade_level.Rd
r-package/tests/testthat/: test-read_adm_ada.R
tests/testthat/: test-parse_grade_level.R  test-read_adm_ada.R
