[metadata]
name = rusdattendance
version = 0.0.1
author = Ben Taft
author_email = ben.taft@career2cradle.org
description = Work with Demographic and Attendance Data from RUSD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/higherX4Racine/rusdattendance
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8


[options.packages.find]
where = src

[build_sphinx]
project = rusdattendance
version = 0.0.1
release = 0.0.1
source-dir = docs/source
